--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hint_totp_name_input">输入设置秘钥</string>
     <string name="hint_totp_account_input">输入设置秘钥</string>
     <string name="text_add_totp_submit">提交</string>
+    <string name="label_input_scan">扫码</string>
+    <string name="label_input_manual">手动输入</string>
 </resources>
