--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">2step</string>
-    <string name="hint_secret_input">输入设置秘钥</string>
-    <string name="hint_totp_name_input">输入设置秘钥</string>
-    <string name="hint_totp_account_input">输入设置秘钥</string>
+    <string name="hint_totp_secret_input">输入设置秘钥</string>
+    <string name="hint_totp_account_input">输入账号名称</string>
     <string name="text_add_totp_submit">提交</string>
     <string name="label_input_scan">扫码</string>
     <string name="label_input_manual">手动输入</string>
