--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="label_input_scan">扫码</string>
     <string name="label_input_manual">手动输入</string>
     <string name="hint_search_bar">搜索</string>
+    <string name="hint_server_url">webdav服务器地址</string>
+    <string name="hint_server_account">账号</string>
+    <string name="hint_server_password">密码</string>
+    <string name="text_jianguo_url">https://dav.jianguoyun.com/dav</string>
 </resources>
