--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="label_settings_sync">同步设置</string>
     <string name="label_settings_about">关于</string>
     <string name="label_settings_license">开源协议</string>
+    <string name="label_settings_sync_webdav">WebDAV</string>
+    <string name="label_settings_sync_onedrive">OneDrive</string>
+    <string name="label_settings_sync_google_drive">Google Drive</string>
+    <string-array name="label_sync_ways">
+        <item>@string/label_settings_sync_webdav</item>
+        <item>@string/label_settings_sync_onedrive</item>
+        <item>@string/label_settings_sync_google_drive</item>
+    </string-array>
 </resources>
