--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -34,4 +34,5 @@
     <string name="snackbar_totp_copy">Copy Successful</string>
     <string name="toast_settings_save_success">Save Successful</string>
     <string name="toast_scan_check_camera">Please check if your device supports the camera module and has granted permission</string>
+    <string name="label_search_bar_options">options</string>
 </resources>
