--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -37,4 +37,8 @@
     <string name="label_search_bar_options">options</string>
     <string name="title_bottom_nav_menu_home">home</string>
     <string name="title_bottom_nav_menu_profile">me</string>
+    <string name="hint_totp_digits_input">digits</string>
+    <string name="hint_totp_period_input">period</string>
+    <string name="error_totp_check_digits">Please enter the digits of the two-factor authentication</string>
+    <string name="error_totp_check_period">Please enter the period of the two-factor authentication</string>
 </resources>
