--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,12 +30,16 @@
     <string name="error_totp_input_account">请输入两步验证账号名称</string>
     <string name="error_totp_input_secret">请输入两步验证账号秘钥</string>
     <string name="toast_totp_check_secret">请输入两步验证账号秘钥</string>
+    <string name="error_totp_check_digits">请输入两步验证数字长度</string>
+    <string name="error_totp_check_period">请输入两步验证周期</string>
     <string name="snackbar_totp_copy">复制成功</string>
     <string name="toast_settings_save_success">保存成功</string>
     <string name="toast_scan_check_camera">请检查您的设备是否支持相机模块且授予了权限</string>
     <string name="label_search_bar_options">选项</string>
     <string name="title_bottom_nav_menu_home">主页</string>
     <string name="title_bottom_nav_menu_profile">我的</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_totp_digits_input">长度</string>
+    <string name="hint_totp_period_input">周期</string>
+    <string name="label_totp_digits_default" translatable="false">6</string>
+    <string name="label_totp_period_default" translatable="false">30</string>
 </resources>
