feat: Improve the QR code scanning entry process.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -41,4 +41,5 @@
     <string name="hint_totp_period_input">period</string>
     <string name="error_totp_check_digits">Please enter the digits of the two-factor authentication</string>
     <string name="error_totp_check_period">Please enter the period of the two-factor authentication</string>
+    <string name="toast_totp_parse_failed">Addition failed, please check if it\'s correct.</string>
 </resources>
