--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="hint_totp_period_input">周期</string>
     <string name="label_totp_digits_default" translatable="false">6</string>
     <string name="label_totp_period_default" translatable="false">30</string>
+    <string name="toast_totp_parse_failed">添加失败，请检查是否正确</string>
 </resources>
