--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,9 +35,6 @@
     <string name="snackbar_totp_copy">复制成功</string>
     <string name="toast_settings_save_success">保存成功</string>
     <string name="toast_scan_check_camera">请检查您的设备是否支持相机模块且授予了权限</string>
-    <string name="label_search_bar_options">选项</string>
-    <string name="title_bottom_nav_menu_home">主页</string>
-    <string name="title_bottom_nav_menu_profile">我的</string>
     <string name="hint_totp_digits_input">长度</string>
     <string name="hint_totp_period_input">周期</string>
     <string name="label_totp_digits_default" translatable="false">6</string>
@@ -46,4 +43,5 @@
     <string name="label_profile_migrate">迁移</string>
     <string name="label_profile_import">导入</string>
     <string name="label_profile_export">导出</string>
+    <string name="label_toolbar_settings">设置</string>
 </resources>
