--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="label_profile_import">导入</string>
     <string name="label_profile_export">导出</string>
     <string name="label_toolbar_settings">设置</string>
+    <string name="label_settings_header_prefs">个性化</string>
 </resources>
