feat: correct text

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,8 +40,10 @@
     <string name="error_totp_check_period">Please enter the period of the two-factor authentication</string>
     <string name="toast_totp_parse_failed">Addition failed, please check if it\'s correct.</string>
     <string name="label_profile_migrate">migrate</string>
-    <string name="label_profile_import">import</string>
-    <string name="label_profile_export">export</string>
+    <string name="label_settings_import">import</string>
+    <string name="label_settings_export">export</string>
     <string name="label_toolbar_settings">settings</string>
     <string name="label_settings_header_prefs">preferences</string>
+    <string name="description_settings_import">Import from other TOTP apps</string>
+    <string name="description_settings_export">Export file for importing into other apps</string>
 </resources>
