feat: add Open Source Library Information

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -48,4 +48,6 @@
     <string name="description_settings_export">Export file for importing into other apps</string>
     <string name="label_import_secret">title</string>
     <string name="label_import_add">add</string>
+    <string name="toast_totp_is_empty">No TOTP data available</string>
+    <string name="label_settings_libraries">open source libraries</string>
 </resources>
